Now uses chrome.alarms and also support for Bing
Now uses chrome.alarms API instead of window.setTimeout to reduce memory usage.

Also supports Bing Image of the Day by using crossorigin.me.

--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
 
   "permissions": [
     "storage",
-    "tabs",
-    "wallpaper"
+    "wallpaper",
+    "alarms"
   ],
   "background": {
     "scripts": [
