--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,14 @@
   "name": "WallpaperCycler",
   "author": "FoxInFlame",
   "description": "Cycle through Wallpapers that you set!",
-  "version": "1.0",
+  "version": "1.1",
   "offline_enabled": false,
 
   "permissions": [
     "storage",
     "wallpaper",
-    "alarms"
+    "alarms",
+    "background"
   ],
   "background": {
     "scripts": [
