--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
   "background": {
     "scripts": [
       "jquery-2.2.3.min.js",
+      "x2js.min.js",
       "background.js"
     ],
     "persistent": true
